infrastructure/cdk.out/localstack.template.json
{
  "Resources": {
    "PatientManagementVPC522067E7": {
    "Type": "AWS::EC2::VPC",
    "Properties": {
      "CidrBlock": "10.0.0.0/16",
      "EnableDnsHostnames": true,
      "EnableDnsSupport": true,
      "InstanceTenancy": "default",
      "Tags": [
      {
        "Key": "Name",
        "Value": "PatientManagementVPC"
      }
      ]
    }
    },
    "PatientManagementVPCPublicSubnet1SubnetC8305E9D": {
    "Type": "AWS::EC2::Subnet",
    "Properties": {
      "AvailabilityZone": {
      "Fn::Select": [
        0,
        {
        "Fn::GetAZs": ""
        }
      ]
      },
      "CidrBlock": "10.0.0.0/18",
      "MapPublicIpOnLaunch": true,
      "Tags": [
      {
        "Key": "aws-cdk:subnet-name",
        "Value": "Public"
      },
      {
        "Key": "aws-cdk:subnet-type",
        "Value": "Public"
      },
      {
        "Key": "Name",
        "Value": "localstack/PatientManagementVPC/PublicSubnet1"
      }
      ],
      "VpcId": {
      "Ref": "PatientManagementVPC522067E7"
      }
    }
    },
    "PatientManagementVPCPublicSubnet1RouteTableA48D3D3E": {
    "Type": "AWS::EC2::RouteTable",
    "Properties": {
      "Tags": [
      {
        "Key": "Name",
        "Value": "localstack/PatientManagementVPC/PublicSubnet1"
      }
      ],
      "VpcId": {
      "Ref": "PatientManagementVPC522067E7"
      }
    }
    },
    "PatientManagementVPCPublicSubnet1RouteTableAssociationA39A24A4": {
    "Type": "AWS::EC2::SubnetRouteTableAssociation",
    "Properties": {
      "RouteTableId": {
      "Ref": "PatientManagementVPCPublicSubnet1RouteTableA48D3D3E"
      },
      "SubnetId": {
      "Ref": "PatientManagementVPCPublicSubnet1SubnetC8305E9D"
      }
    }
    },
    "PatientManagementVPCPublicSubnet1DefaultRoute1E407ABB": {
    "Type": "AWS::EC2::Route",
    "Properties": {
      "DestinationCidrBlock": "0.0.0.0/0",
      "GatewayId": {
      "Ref": "PatientManagementVPCIGWA0746919"
      },
      "RouteTableId": {
      "Ref": "PatientManagementVPCPublicSubnet1RouteTableA48D3D3E"
      }
    },
    "DependsOn": [
      "PatientManagementVPCVPCGW1FFEFAEB"
    ]
    },
    "PatientManagementVPCPublicSubnet1EIPC113BD7F": {
    "Type": "AWS::EC2::EIP",
    "Properties": {
      "Domain": "vpc",
      "Tags": [
      {
        "Key": "Name",
        "Value": "localstack/PatientManagementVPC/PublicSubnet1"
      }
      ]
    }
    },
    "PatientManagementVPCPublicSubnet1NATGatewayB9CF9F92": {
    "Type": "AWS::EC2::NatGateway",
    "Properties": {
      "AllocationId": {
      "Fn::GetAtt": [
        "PatientManagementVPCPublicSubnet1EIPC113BD7F",
        "AllocationId"
      ]
      },
      "SubnetId": {
      "Ref": "PatientManagementVPCPublicSubnet1SubnetC8305E9D"
      },
      "Tags": [
      {
        "Key": "Name",
        "Value": "localstack/PatientManagementVPC/PublicSubnet1"
      }
      ]
    },
    "DependsOn": [
      "PatientManagementVPCPublicSubnet1DefaultRoute1E407ABB",
      "PatientManagementVPCPublicSubnet1RouteTableAssociationA39A24A4"
    ]
    },
    "PatientManagementVPCPublicSubnet2Subnet07CEC558": {
    "Type": "AWS::EC2::Subnet",
    "Properties": {
      "AvailabilityZone": {
      "Fn::Select": [
        1,
        {
        "Fn::GetAZs": ""
        }
      ]
      },
      "CidrBlock": "10.0.64.0/18",
      "MapPublicIpOnLaunch": true,
      "Tags": [
      {
        "Key": "aws-cdk:subnet-name",
        "Value": "Public"
      },
      {
        "Key": "aws-cdk:subnet-type",
        "Value": "Public"
      },
      {
        "Key": "Name",
        "Value": "localstack/PatientManagementVPC/PublicSubnet2"
      }
      ],
      "VpcId": {
      "Ref": "PatientManagementVPC522067E7"
      }
    }
    },
    "PatientManagementVPCPublicSubnet2RouteTable391C4D34": {
    "Type": "AWS::EC2::RouteTable",
    "Properties": {
      "Tags": [
      {
        "Key": "Name",
        "Value": "localstack/PatientManagementVPC/PublicSubnet2"
      }
      ],
      "VpcId": {
      "Ref": "PatientManagementVPC522067E7"
      }
    }
    },
    "PatientManagementVPCPublicSubnet2RouteTableAssociationCAC8BA09": {
    "Type": "AWS::EC2::SubnetRouteTableAssociation",
    "Properties": {
      "RouteTableId": {
      "Ref": "PatientManagementVPCPublicSubnet2RouteTable391C4D34"
      },
      "SubnetId": {
      "Ref": "PatientManagementVPCPublicSubnet2Subnet07CEC558"
      }
    }
    },
    "PatientManagementVPCPublicSubnet2DefaultRoute2DC1F916": {
    "Type": "AWS::EC2::Route",
    "Properties": {
      "DestinationCidrBlock": "0.0.0.0/0",
      "GatewayId": {
      "Ref": "PatientManagementVPCIGWA0746919"
      },
      "RouteTableId": {
      "Ref": "PatientManagementVPCPublicSubnet2RouteTable391C4D34"
      }
    },
    "DependsOn": [
      "PatientManagementVPCVPCGW1FFEFAEB"
    ]
    },
    "PatientManagementVPCPublicSubnet2EIP208E0C4A": {
    "Type": "AWS::EC2::EIP",
    "Properties": {
      "Domain": "vpc",
      "Tags": [
      {
        "Key": "Name",
        "Value": "localstack/PatientManagementVPC/PublicSubnet2"
      }
      ]
    }
    },
    "PatientManagementVPCPublicSubnet2NATGateway28B0784D": {
    "Type": "AWS::EC2::NatGateway",
    "Properties": {
      "AllocationId": {
      "Fn::GetAtt": [
        "PatientManagementVPCPublicSubnet2EIP208E0C4A",
        "AllocationId"
      ]
      },
      "SubnetId": {
      "Ref": "PatientManagementVPCPublicSubnet2Subnet07CEC558"
      },
      "Tags": [
      {
        "Key": "Name",
        "Value": "localstack/PatientManagementVPC/PublicSubnet2"
      }
      ]
    },
    "DependsOn": [
      "PatientManagementVPCPublicSubnet2DefaultRoute2DC1F916",
      "PatientManagementVPCPublicSubnet2RouteTableAssociationCAC8BA09"
    ]
    },
    "PatientManagementVPCPrivateSubnet1Subnet05B10E79": {
    "Type": "AWS::EC2::Subnet",
    "Properties": {
      "AvailabilityZone": {
      "Fn::Select": [
        0,
        {
        "Fn::GetAZs": ""
        }
      ]
      },
      "CidrBlock": "10.0.128.0/18",
      "MapPublicIpOnLaunch": false,
      "Tags": [
      {
        "Key": "aws-cdk:subnet-name",
        "Value": "Private"
      },
      {
        "Key": "aws-cdk:subnet-type",
        "Value": "Private"
      },
      {
        "Key": "Name",
        "Value": "localstack/PatientManagementVPC/PrivateSubnet1"
      }
      ],
      "VpcId": {
      "Ref": "PatientManagementVPC522067E7"
      }
    }
    },
    "PatientManagementVPCPrivateSubnet1RouteTableE0FA4385": {
    "Type": "AWS::EC2::RouteTable",
    "Properties": {
      "Tags": [
      {
        "Key": "Name",
        "Value": "localstack/PatientManagementVPC/PrivateSubnet1"
      }
      ],
      "VpcId": {
      "Ref": "PatientManagementVPC522067E7"
      }
    }
    },
    "PatientManagementVPCPrivateSubnet1RouteTableAssociationAA604973": {
    "Type": "AWS::EC2::SubnetRouteTableAssociation",
    "Properties": {
      "RouteTableId": {
      "Ref": "PatientManagementVPCPrivateSubnet1RouteTableE0FA4385"
      },
      "SubnetId": {
      "Ref": "PatientManagementVPCPrivateSubnet1Subnet05B10E79"
      }
    }
    },
    "PatientManagementVPCPrivateSubnet1DefaultRouteC24DADA9": {
    "Type": "AWS::EC2::Route",
    "Properties": {
      "DestinationCidrBlock": "0.0.0.0/0",
      "NatGatewayId": {
      "Ref": "PatientManagementVPCPublicSubnet1NATGatewayB9CF9F92"
      },
      "RouteTableId": {
      "Ref": "PatientManagementVPCPrivateSubnet1RouteTableE0FA4385"
      }
    }
    },
    "PatientManagementVPCPrivateSubnet2Subnet8A2E409C": {
    "Type": "AWS::EC2::Subnet",
    "Properties": {
      "AvailabilityZone": {
      "Fn::Select": [
        1,
        {
        "Fn::GetAZs": ""
        }
      ]
      },
      "CidrBlock": "10.0.192.0/18",
      "MapPublicIpOnLaunch": false,
      "Tags": [
      {
        "Key": "aws-cdk:subnet-name",
        "Value": "Private"
      },
      {
        "Key": "aws-cdk:subnet-type",
        "Value": "Private"
      },
      {
        "Key": "Name",
        "Value": "localstack/PatientManagementVPC/PrivateSubnet2"
      }
      ],
      "VpcId": {
      "Ref": "PatientManagementVPC522067E7"
      }
    }
    },
    "PatientManagementVPCPrivateSubnet2RouteTableBC0C3BB6": {
    "Type": "AWS::EC2::RouteTable",
    "Properties": {
      "Tags": [
      {
        "Key": "Name",
        "Value": "localstack/PatientManagementVPC/PrivateSubnet2"
      }
      ],
      "VpcId": {
      "Ref": "PatientManagementVPC522067E7"
      }
    }
    },
    "PatientManagementVPCPrivateSubnet2RouteTableAssociationC55EBEF2": {
    "Type": "AWS::EC2::SubnetRouteTableAssociation",
    "Properties": {
      "RouteTableId": {
      "Ref": "PatientManagementVPCPrivateSubnet2RouteTableBC0C3BB6"
      },
      "SubnetId": {
      "Ref": "PatientManagementVPCPrivateSubnet2Subnet8A2E409C"
      }
    }
    },
    "PatientManagementVPCPrivateSubnet2DefaultRoute98121A2D": {
    "Type": "AWS::EC2::Route",
    "Properties": {
      "DestinationCidrBlock": "0.0.0.0/0",
      "NatGatewayId": {
      "Ref": "PatientManagementVPCPublicSubnet2NATGateway28B0784D"
      },
      "RouteTableId": {
      "Ref": "PatientManagementVPCPrivateSubnet2RouteTableBC0C3BB6"
      }
    }
    },
    "PatientManagementVPCIGWA0746919": {
    "Type": "AWS::EC2::InternetGateway",
    "Properties": {
      "Tags": [
      {
        "Key": "Name",
        "Value": "PatientManagementVPC"
      }
      ]
    }
    },
    "PatientManagementVPCVPCGW1FFEFAEB": {
    "Type": "AWS::EC2::VPCGatewayAttachment",
    "Properties": {
      "InternetGatewayId": {
      "Ref": "PatientManagementVPCIGWA0746919"
      },
      "VpcId": {
      "Ref": "PatientManagementVPC522067E7"
      }
    }
    },
    "AuthServiceDBSubnetGroupCFE5A552": {
    "Type": "AWS::RDS::DBSubnetGroup",
    "Properties": {
      "DBSubnetGroupDescription": "Subnet group for AuthServiceDB database",
      "SubnetIds": [
      {
        "Ref": "PatientManagementVPCPrivateSubnet1Subnet05B10E79"
      },
      {
        "Ref": "PatientManagementVPCPrivateSubnet2Subnet8A2E409C"
      }
      ]
    }
    },
    "AuthServiceDBSecurityGroupBE6D28EB": {
    "Type": "AWS::EC2::SecurityGroup",
    "Properties": {
      "GroupDescription": "Security group for AuthServiceDB database",
      "SecurityGroupEgress": [
      {
        "CidrIp": "0.0.0.0/0",
        "Description": "Allow all outbound traffic by default",
        "IpProtocol": "-1"
      }
      ],
      "VpcId": {
      "Ref": "PatientManagementVPC522067E7"
      }
    }
    },
    "localstackAuthServiceDBSecretE93C53FD3fdaad7efa858a3daf9490cf0a702aeb": {
    "Type": "AWS::SecretsManager::Secret",
    "Properties": {
      "Description": {
      "Fn::Join": [
        "",
        [
        "Generated by the CDK for stack: ",
        {
          "Ref": "AWS::StackName"
        }
        ]
      ]
      },
      "GenerateSecretString": {
      "ExcludeCharacters": " %+~`#$&*()|[]{}:;<>?!'/@\"\\",
      "GenerateStringKey": "password",
      "PasswordLength": 30,
      "SecretStringTemplate": "{\"username\":\"admin_user\"}"
      }
    },
    "UpdateReplacePolicy": "Delete",
    "DeletionPolicy": "Delete"
    },
    "AuthServiceDBSecretAttachmentF30406A9": {
    "Type": "AWS::SecretsManager::SecretTargetAttachment",
    "Properties": {
      "SecretId": {
      "Ref": "localstackAuthServiceDBSecretE93C53FD3fdaad7efa858a3daf9490cf0a702aeb"
      },
      "TargetId": {
      "Ref": "AuthServiceDBC6B688BA"
      },
      "TargetType": "AWS::RDS::DBInstance"
    }
    },
    "AuthServiceDBC6B688BA": {
    "Type": "AWS::RDS::DBInstance",
    "Properties": {
      "AllocatedStorage": "20",
      "CopyTagsToSnapshot": true,
      "DBInstanceClass": "db.t2.micro",
      "DBName": "auth-service-db",
      "DBSubnetGroupName": {
      "Ref": "AuthServiceDBSubnetGroupCFE5A552"
      },
      "Engine": "postgres",
      "EngineVersion": "17.2",
      "MasterUserPassword": {
      "Fn::Join": [
        "",
        [
        "{{resolve:secretsmanager:",
        {
          "Ref": "localstackAuthServiceDBSecretE93C53FD3fdaad7efa858a3daf9490cf0a702aeb"
        },
        ":SecretString:password::}}"
        ]
      ]
      },
      "MasterUsername": "admin_user",
      "StorageType": "gp2",
      "VPCSecurityGroups": [
      {
        "Fn::GetAtt": [
        "AuthServiceDBSecurityGroupBE6D28EB",
        "GroupId"
        ]
      }
      ]
    },
    "UpdateReplacePolicy": "Delete",
    "DeletionPolicy": "Delete"
    },
    "PatientServiceDBSubnetGroupCED49D16": {
    "Type": "AWS::RDS::DBSubnetGroup",
    "Properties": {
      "DBSubnetGroupDescription": "Subnet group for PatientServiceDB database",
      "SubnetIds": [
      {
        "Ref": "PatientManagementVPCPrivateSubnet1Subnet05B10E79"
      },
      {
        "Ref": "PatientManagementVPCPrivateSubnet2Subnet8A2E409C"
      }
      ]
    }
    },
    "PatientServiceDBSecurityGroup6B97C0E5": {
    "Type": "AWS::EC2::SecurityGroup",
    "Properties": {
      "GroupDescription": "Security group for PatientServiceDB database",
      "SecurityGroupEgress": [
      {
        "CidrIp": "0.0.0.0/0",
        "Description": "Allow all outbound traffic by default",
        "IpProtocol": "-1"
      }
      ],
      "VpcId": {
      "Ref": "PatientManagementVPC522067E7"
      }
    }
    },
    "localstackPatientServiceDBSecret20E0A9443fdaad7efa858a3daf9490cf0a702aeb": {
    "Type": "AWS::SecretsManager::Secret",
    "Properties": {
      "Description": {
      "Fn::Join": [
        "",
        [
        "Generated by the CDK for stack: ",
        {
          "Ref": "AWS::StackName"
        }
        ]
      ]
      },
      "GenerateSecretString": {
      "ExcludeCharacters": " %+~`#$&*()|[]{}:;<>?!'/@\"\\",
      "GenerateStringKey": "password",
      "PasswordLength": 30,
      "SecretStringTemplate": "{\"username\":\"admin_user\"}"
      }
    },
    "UpdateReplacePolicy": "Delete",
    "DeletionPolicy": "Delete"
    },
    "PatientServiceDBSecretAttachment90D77B03": {
    "Type": "AWS::SecretsManager::SecretTargetAttachment",
    "Properties": {
      "SecretId": {
      "Ref": "localstackPatientServiceDBSecret20E0A9443fdaad7efa858a3daf9490cf0a702aeb"
      },
      "TargetId": {
      "Ref": "PatientServiceDBB84F9BF9"
      },
      "TargetType": "AWS::RDS::DBInstance"
    }
    },
    "PatientServiceDBB84F9BF9": {
    "Type": "AWS::RDS::DBInstance",
    "Properties": {
      "AllocatedStorage": "20",
      "CopyTagsToSnapshot": true,
      "DBInstanceClass": "db.t2.micro",
      "DBName": "patient-service-db",
      "DBSubnetGroupName": {
      "Ref": "PatientServiceDBSubnetGroupCED49D16"
      },
      "Engine": "postgres",
      "EngineVersion": "17.2",
      "MasterUserPassword": {
      "Fn::Join": [
        "",
        [
        "{{resolve:secretsmanager:",
        {
          "Ref": "localstackPatientServiceDBSecret20E0A9443fdaad7efa858a3daf9490cf0a702aeb"
        },
        ":SecretString:password::}}"
        ]
      ]
      },
      "MasterUsername": "admin_user",
      "StorageType": "gp2",
      "VPCSecurityGroups": [
      {
        "Fn::GetAtt": [
        "PatientServiceDBSecurityGroup6B97C0E5",
        "GroupId"
        ]
      }
      ]
    },
    "UpdateReplacePolicy": "Delete",
    "DeletionPolicy": "Delete"
    },
    "AuthServiceDBHealthCheck": {
    "Type": "AWS::Route53::HealthCheck",
    "Properties": {
      "HealthCheckConfig": {
      "FailureThreshold": 3,
      "IPAddress": {
        "Fn::GetAtt": [
        "AuthServiceDBC6B688BA",
        "Endpoint.Address"
        ]
      },
      "Port": {
        "Fn::GetAtt": [
        "AuthServiceDBC6B688BA",
        "Endpoint.Port"
        ]
      },
      "RequestInterval": 30,
      "Type": "TCP"
      }
    }
    },
    "PatientServiceDBHealthCheck": {
    "Type": "AWS::Route53::HealthCheck",
    "Properties": {
      "HealthCheckConfig": {
      "FailureThreshold": 3,
      "IPAddress": {
        "Fn::GetAtt": [
        "PatientServiceDBB84F9BF9",
        "Endpoint.Address"
        ]
      },
      "Port": {
        "Fn::GetAtt": [
        "PatientServiceDBB84F9BF9",
        "Endpoint.Port"
        ]
      },
      "RequestInterval": 30,
      "Type": "TCP"
      }
    }
    },
    "MskCluster": {
    "Type": "AWS::MSK::Cluster",
    "Properties": {
      "BrokerNodeGroupInfo": {
      "BrokerAZDistribution": "DEFAULT",
      "ClientSubnets": [
        {
        "Ref": "PatientManagementVPCPrivateSubnet1Subnet05B10E79"
        },
        {
        "Ref": "PatientManagementVPCPrivateSubnet2Subnet8A2E409C"
        }
      ],
      "InstanceType": "kafka.m5.xlarge"
      },
      "ClusterName": "kafa-cluster",
      "KafkaVersion": "2.8.0",
      "NumberOfBrokerNodes": 1
    }
    },
    "PatientManagementCluster98E10F8D": {
    "Type": "AWS::ECS::Cluster"
    },
    "PatientManagementClusterDefaultServiceDiscoveryNamespace72C5F264": {
    "Type": "AWS::ServiceDiscovery::PrivateDnsNamespace",
    "Properties": {
      "Name": "patient-management.local",
      "Vpc": {
      "Ref": "PatientManagementVPC522067E7"
      }
    }
    },
    "AuthServiceTaskTaskRoleE466B974": {
    "Type": "AWS::IAM::Role",
    "Properties": {
      "AssumeRolePolicyDocument": {
      "Statement": [
        {
        "Action": "sts:AssumeRole",
        "Effect": "Allow",
        "Principal": {
          "Service": "ecs-tasks.amazonaws.com"
        }
        }
      ],
      "Version": "2012-10-17"
      }
    }
    },
    "AuthServiceTask82E6680D": {
    "Type": "AWS::ECS::TaskDefinition",
    "Properties": {
      "ContainerDefinitions": [
      {
        "Environment": [
        {
          "Name": "SPRING_SQL_INIT_MODE",
          "Value": "always"
        },
        {
          "Name": "JWT_SECRET",
          "Value": "Y2hhVEc3aHJnb0hYTzMyZ2ZqVkpiZ1RkZG93YWxrUkM="
        },
        {
          "Name": "SPRING_DATASOURCE_URL",
          "Value": {
          "Fn::Join": [
            "",
            [
            "jdbc:postgresql://",
            {
              "Fn::GetAtt": [
              "AuthServiceDBC6B688BA",
              "Endpoint.Address"
              ]
            },
            ":",
            {
              "Fn::GetAtt": [
              "AuthServiceDBC6B688BA",
              "Endpoint.Port"
              ]
            },
            "/auth-service-db"
            ]
          ]
          }
        },
        {
          "Name": "SPRING_DATASOURCE_PASSWORD",
          "Value": {
          "Fn::Join": [
            "",
            [
            "{{resolve:secretsmanager:",
            {
              "Ref": "AuthServiceDBSecretAttachmentF30406A9"
            },
            ":SecretString:password::}}"
            ]
          ]
          }
        },
        {
          "Name": "SPRING_JPA_HIBERNATE_DDL_AUTO",
          "Value": "update"
        },
        {
          "Name": "SPRING_DATASOURCE_HIKARI_INITIALIZATION_FAIL_TIMEOUT",
          "Value": "60000"
        },
        {
          "Name": "SPRING_DATASOURCE_USERNAME",
          "Value": "admin_user"
        },
        {
          "Name": "SPRING_KAFKA_BOOTSTRAP_SERVERS",
          "Value": "localhost.localstack.cloud:4510, localhost.localstack.cloud:4511, localhost.localstack.cloud:4512"
        }
        ],
        "Essential": true,
        "Image": "auth-service",
        "LogConfiguration": {
        "LogDriver": "awslogs",
        "Options": {
          "awslogs-group": {
          "Ref": "AuthServiceLogGroup34125B38"
          },
          "awslogs-stream-prefix": "auth-service",
          "awslogs-region": {
          "Ref": "AWS::Region"
          }
        }
        },
        "Name": "auth-serviceContainer",
        "PortMappings": [
        {
          "ContainerPort": 4005,
          "HostPort": 4005,
          "Protocol": "tcp"
        }
        ]
      }
      ],
      "Cpu": "256",
      "ExecutionRoleArn": {
      "Fn::GetAtt": [
        "AuthServiceTaskExecutionRoleA1258495",
        "Arn"
      ]
      },
      "Family": "localstackAuthServiceTask4114E6CA",
      "Memory": "512",
      "NetworkMode": "awsvpc",
      "RequiresCompatibilities": [
      "FARGATE"
      ],
      "TaskRoleArn": {
      "Fn::GetAtt": [
        "AuthServiceTaskTaskRoleE466B974",
        "Arn"
      ]
      }
    }
    },
    "AuthServiceTaskExecutionRoleA1258495": {
    "Type": "AWS::IAM::Role",
    "Properties": {
      "AssumeRolePolicyDocument": {
      "Statement": [
        {
        "Action": "sts:AssumeRole",
        "Effect": "Allow",
        "Principal": {
          "Service": "ecs-tasks.amazonaws.com"
        }
        }
      ],
      "Version": "2012-10-17"
      }
    }
    },
    "AuthServiceTaskExecutionRoleDefaultPolicyF20AD0D3": {
    "Type": "AWS::IAM::Policy",
    "Properties": {
      "PolicyDocument": {
      "Statement": [
        {
        "Action": [
          "logs:CreateLogStream",
          "logs:PutLogEvents"
        ],
        "Effect": "Allow",
        "Resource": {
          "Fn::GetAtt": [
          "AuthServiceLogGroup34125B38",
          "Arn"
          ]
        }
        }
      ],
      "Version": "2012-10-17"
      },
      "PolicyName": "AuthServiceTaskExecutionRoleDefaultPolicyF20AD0D3",
      "Roles": [
      {
        "Ref": "AuthServiceTaskExecutionRoleA1258495"
      }
      ]
    }
    },
    "AuthServiceLogGroup34125B38": {
    "Type": "AWS::Logs::LogGroup",
    "Properties": {
      "LogGroupName": "/ecs/auth-service",
      "RetentionInDays": 1
    },
    "UpdateReplacePolicy": "Delete",
    "DeletionPolicy": "Delete"
    },
    "AuthService3C2B741A": {
    "Type": "AWS::ECS::Service",
    "Properties": {
      "Cluster": {
      "Ref": "PatientManagementCluster98E10F8D"
      },
      "DeploymentConfiguration": {
      "Alarms": {
        "AlarmNames": [],
        "Enable": false,
        "Rollback": false
      },
      "MaximumPercent": 200,
      "MinimumHealthyPercent": 50
      },
      "EnableECSManagedTags": false,
      "LaunchType": "FARGATE",
      "NetworkConfiguration": {
      "AwsvpcConfiguration": {
        "AssignPublicIp": "DISABLED",
        "SecurityGroups": [
        {
          "Fn::GetAtt": [
          "AuthServiceSecurityGroup67F2FA7D",
          "GroupId"
          ]
        }
        ],
        "Subnets": [
        {
          "Ref": "PatientManagementVPCPrivateSubnet1Subnet05B10E79"
        },
        {
          "Ref": "PatientManagementVPCPrivateSubnet2Subnet8A2E409C"
        }
        ]
      }
      },
      "ServiceName": "auth-service",
      "TaskDefinition": {
      "Ref": "AuthServiceTask82E6680D"
      }
    },
    "DependsOn": [
      "AuthServiceDBC6B688BA",
      "AuthServiceDBSecretAttachmentF30406A9",
      "localstackAuthServiceDBSecretE93C53FD3fdaad7efa858a3daf9490cf0a702aeb",
      "AuthServiceDBSecurityGroupBE6D28EB",
      "AuthServiceDBSubnetGroupCFE5A552",
      "AuthServiceDBHealthCheck",
      "AuthServiceTaskTaskRoleE466B974"
    ]
    },
    "AuthServiceSecurityGroup67F2FA7D": {
    "Type": "AWS::EC2::SecurityGroup",
    "Properties": {
      "GroupDescription": "localstack/AuthService/SecurityGroup",
      "SecurityGroupEgress": [
      {
        "CidrIp": "0.0.0.0/0",
        "Description": "Allow all outbound traffic by default",
        "IpProtocol": "-1"
      }
      ],
      "VpcId": {
      "Ref": "PatientManagementVPC522067E7"
      }
    },
    "DependsOn": [
      "AuthServiceDBC6B688BA",
      "AuthServiceDBSecretAttachmentF30406A9",
      "localstackAuthServiceDBSecretE93C53FD3fdaad7efa858a3daf9490cf0a702aeb",
      "AuthServiceDBSecurityGroupBE6D28EB",
      "AuthServiceDBSubnetGroupCFE5A552",
      "AuthServiceDBHealthCheck",
      "AuthServiceTaskTaskRoleE466B974"
    ]
    },
    "BillingServiceTaskTaskRole7A547BBF": {
    "Type": "AWS::IAM::Role",
    "Properties": {
      "AssumeRolePolicyDocument": {
      "Statement": [
        {
        "Action": "sts:AssumeRole",
        "Effect": "Allow",
        "Principal": {
          "Service": "ecs-tasks.amazonaws.com"
        }
        }
      ],
      "Version": "2012-10-17"
      }
    }
    },
    "BillingServiceTask30D9C66E": {
    "Type": "AWS::ECS::TaskDefinition",
    "Properties": {
      "ContainerDefinitions": [
      {
        "Environment": [
        {
          "Name": "SPRING_KAFKA_BOOTSTRAP_SERVERS",
          "Value": "localhost.localstack.cloud:4510, localhost.localstack.cloud:4511, localhost.localstack.cloud:4512"
        }
        ],
        "Essential": true,
        "Image": "billing-service",
        "LogConfiguration": {
        "LogDriver": "awslogs",
        "Options": {
          "awslogs-group": {
          "Ref": "BillingServiceLogGroupDD61E740"
          },
          "awslogs-stream-prefix": "billing-service",
          "awslogs-region": {
          "Ref": "AWS::Region"
          }
        }
        },
        "Name": "billing-serviceContainer",
        "PortMappings": [
        {
          "ContainerPort": 4001,
          "HostPort": 4001,
          "Protocol": "tcp"
        },
        {
          "ContainerPort": 9001,
          "HostPort": 9001,
          "Protocol": "tcp"
        }
        ]
      }
      ],
      "Cpu": "256",
      "ExecutionRoleArn": {
      "Fn::GetAtt": [
        "BillingServiceTaskExecutionRole11FE8DE2",
        "Arn"
      ]
      },
      "Family": "localstackBillingServiceTaskAB0446C6",
      "Memory": "512",
      "NetworkMode": "awsvpc",
      "RequiresCompatibilities": [
      "FARGATE"
      ],
      "TaskRoleArn": {
      "Fn::GetAtt": [
        "BillingServiceTaskTaskRole7A547BBF",
        "Arn"
      ]
      }
    }
    },
    "BillingServiceTaskExecutionRole11FE8DE2": {
    "Type": "AWS::IAM::Role",
    "Properties": {
      "AssumeRolePolicyDocument": {
      "Statement": [
        {
        "Action": "sts:AssumeRole",
        "Effect": "Allow",
        "Principal": {
          "Service": "ecs-tasks.amazonaws.com"
        }
        }
      ],
      "Version": "2012-10-17"
      }
    }
    },
    "BillingServiceTaskExecutionRoleDefaultPolicy4F4033C9": {
    "Type": "AWS::IAM::Policy",
    "Properties": {
      "PolicyDocument": {
      "Statement": [
        {
        "Action": [
          "logs:CreateLogStream",
          "logs:PutLogEvents"
        ],
        "Effect": "Allow",
        "Resource": {
          "Fn::GetAtt": [
          "BillingServiceLogGroupDD61E740",
          "Arn"
          ]
        }
        }
      ],
      "Version": "2012-10-17"
      },
      "PolicyName": "BillingServiceTaskExecutionRoleDefaultPolicy4F4033C9",
      "Roles": [
      {
        "Ref": "BillingServiceTaskExecutionRole11FE8DE2"
      }
      ]
    }
    },
    "BillingServiceLogGroupDD61E740": {
    "Type": "AWS::Logs::LogGroup",
    "Properties": {
      "LogGroupName": "/ecs/billing-service",
      "RetentionInDays": 1
    },
    "UpdateReplacePolicy": "Delete",
    "DeletionPolicy": "Delete"
    },
    "BillingServiceFEB36D90": {
    "Type": "AWS::ECS::Service",
    "Properties": {
      "Cluster": {
      "Ref": "PatientManagementCluster98E10F8D"
      },
      "DeploymentConfiguration": {
      "Alarms": {
        "AlarmNames": [],
        "Enable": false,
        "Rollback": false
      },
      "MaximumPercent": 200,
      "MinimumHealthyPercent": 50
      },
      "EnableECSManagedTags": false,
      "LaunchType": "FARGATE",
      "NetworkConfiguration": {
      "AwsvpcConfiguration": {
        "AssignPublicIp": "DISABLED",
        "SecurityGroups": [
        {
          "Fn::GetAtt": [
          "BillingServiceSecurityGroup3783AD35",
          "GroupId"
          ]
        }
        ],
        "Subnets": [
        {
          "Ref": "PatientManagementVPCPrivateSubnet1Subnet05B10E79"
        },
        {
          "Ref": "PatientManagementVPCPrivateSubnet2Subnet8A2E409C"
        }
        ]
      }
      },
      "ServiceName": "billing-service",
      "TaskDefinition": {
      "Ref": "BillingServiceTask30D9C66E"
      }
    },
    "DependsOn": [
      "BillingServiceTaskTaskRole7A547BBF"
    ]
    },
    "BillingServiceSecurityGroup3783AD35": {
    "Type": "AWS::EC2::SecurityGroup",
    "Properties": {
      "GroupDescription": "localstack/BillingService/SecurityGroup",
      "SecurityGroupEgress": [
      {
        "CidrIp": "0.0.0.0/0",
        "Description": "Allow all outbound traffic by default",
        "IpProtocol": "-1"
      }
      ],
      "VpcId": {
      "Ref": "PatientManagementVPC522067E7"
      }
    },
    "DependsOn": [
      "BillingServiceTaskTaskRole7A547BBF"
    ]
    },
    "AnalyticsServiceTaskTaskRole1ABB10CB": {
    "Type": "AWS::IAM::Role",
    "Properties": {
      "AssumeRolePolicyDocument": {
      "Statement": [
        {
        "Action": "sts:AssumeRole",
        "Effect": "Allow",
        "Principal": {
          "Service": "ecs-tasks.amazonaws.com"
        }
        }
      ],
      "Version": "2012-10-17"
      }
    }
    },
    "AnalyticsServiceTaskC3AFBC47": {
    "Type": "AWS::ECS::TaskDefinition",
    "Properties": {
      "ContainerDefinitions": [
      {
        "Environment": [
        {
          "Name": "SPRING_KAFKA_BOOTSTRAP_SERVERS",
          "Value": "localhost.localstack.cloud:4510, localhost.localstack.cloud:4511, localhost.localstack.cloud:4512"
        }
        ],
        "Essential": true,
        "Image": "analytics-service",
        "LogConfiguration": {
        "LogDriver": "awslogs",
        "Options": {
          "awslogs-group": {
          "Ref": "AnalyticsServiceLogGroupBD82F12A"
          },
          "awslogs-stream-prefix": "analytics-service",
          "awslogs-region": {
          "Ref": "AWS::Region"
          }
        }
        },
        "Name": "analytics-serviceContainer",
        "PortMappings": [
        {
          "ContainerPort": 4002,
          "HostPort": 4002,
          "Protocol": "tcp"
        }
        ]
      }
      ],
      "Cpu": "256",
      "ExecutionRoleArn": {
      "Fn::GetAtt": [
        "AnalyticsServiceTaskExecutionRoleBAF654B2",
        "Arn"
      ]
      },
      "Family": "localstackAnalyticsServiceTask353A5B10",
      "Memory": "512",
      "NetworkMode": "awsvpc",
      "RequiresCompatibilities": [
      "FARGATE"
      ],
      "TaskRoleArn": {
      "Fn::GetAtt": [
        "AnalyticsServiceTaskTaskRole1ABB10CB",
        "Arn"
      ]
      }
    }
    },
    "AnalyticsServiceTaskExecutionRoleBAF654B2": {
    "Type": "AWS::IAM::Role",
    "Properties": {
      "AssumeRolePolicyDocument": {
      "Statement": [
        {
        "Action": "sts:AssumeRole",
        "Effect": "Allow",
        "Principal": {
          "Service": "ecs-tasks.amazonaws.com"
        }
        }
      ],
      "Version": "2012-10-17"
      }
    }
    },
    "AnalyticsServiceTaskExecutionRoleDefaultPolicy99868928": {
    "Type": "AWS::IAM::Policy",
    "Properties": {
      "PolicyDocument": {
      "Statement": [
        {
        "Action": [
          "logs:CreateLogStream",
          "logs:PutLogEvents"
        ],
        "Effect": "Allow",
        "Resource": {
          "Fn::GetAtt": [
          "AnalyticsServiceLogGroupBD82F12A",
          "Arn"
          ]
        }
        }
      ],
      "Version": "2012-10-17"
      },
      "PolicyName": "AnalyticsServiceTaskExecutionRoleDefaultPolicy99868928",
      "Roles": [
      {
        "Ref": "AnalyticsServiceTaskExecutionRoleBAF654B2"
      }
      ]
    }
    },
    "AnalyticsServiceLogGroupBD82F12A": {
    "Type": "AWS::Logs::LogGroup",
    "Properties": {
      "LogGroupName": "/ecs/analytics-service",
      "RetentionInDays": 1
    },
    "UpdateReplacePolicy": "Delete",
    "DeletionPolicy": "Delete"
    },
    "AnalyticsServiceCD38C492": {
    "Type": "AWS::ECS::Service",
    "Properties": {
      "Cluster": {
      "Ref": "PatientManagementCluster98E10F8D"
      },
      "DeploymentConfiguration": {
      "Alarms": {
        "AlarmNames": [],
        "Enable": false,
        "Rollback": false
      },
      "MaximumPercent": 200,
      "MinimumHealthyPercent": 50
      },
      "EnableECSManagedTags": false,
      "LaunchType": "FARGATE",
      "NetworkConfiguration": {
      "AwsvpcConfiguration": {
        "AssignPublicIp": "DISABLED",
        "SecurityGroups": [
        {
          "Fn::GetAtt": [
          "AnalyticsServiceSecurityGroupBA6AE98A",
          "GroupId"
          ]
        }
        ],
        "Subnets": [
        {
          "Ref": "PatientManagementVPCPrivateSubnet1Subnet05B10E79"
        },
        {
          "Ref": "PatientManagementVPCPrivateSubnet2Subnet8A2E409C"
        }
        ]
      }
      },
      "ServiceName": "analytics-service",
      "TaskDefinition": {
      "Ref": "AnalyticsServiceTaskC3AFBC47"
      }
    },
    "DependsOn": [
      "AnalyticsServiceTaskTaskRole1ABB10CB",
      "MskCluster"
    ]
    },
    "AnalyticsServiceSecurityGroupBA6AE98A": {
    "Type": "AWS::EC2::SecurityGroup",
    "Properties": {
      "GroupDescription": "localstack/AnalyticsService/SecurityGroup",
      "SecurityGroupEgress": [
      {
        "CidrIp": "0.0.0.0/0",
        "Description": "Allow all outbound traffic by default",
        "IpProtocol": "-1"
      }
      ],
      "VpcId": {
      "Ref": "PatientManagementVPC522067E7"
      }
    },
    "DependsOn": [
      "AnalyticsServiceTaskTaskRole1ABB10CB",
      "MskCluster"
    ]
    },
    "PatientServiceTaskTaskRole4FB5B4E2": {
    "Type": "AWS::IAM::Role",
    "Properties": {
      "AssumeRolePolicyDocument": {
      "Statement": [
        {
        "Action": "sts:AssumeRole",
        "Effect": "Allow",
        "Principal": {
          "Service": "ecs-tasks.amazonaws.com"
        }
        }
      ],
      "Version": "2012-10-17"
      }
    }
    },
    "PatientServiceTaskF865B565": {
    "Type": "AWS::ECS::TaskDefinition",
    "Properties": {
      "ContainerDefinitions": [
      {
        "Environment": [
        {
          "Name": "BILLING_SERVICE_GRPC_PORT",
          "Value": "9001"
        },
        {
          "Name": "SPRING_SQL_INIT_MODE",
          "Value": "always"
        },
        {
          "Name": "SPRING_DATASOURCE_URL",
          "Value": {
          "Fn::Join": [
            "",
            [
            "jdbc:postgresql://",
            {
              "Fn::GetAtt": [
              "PatientServiceDBB84F9BF9",
              "Endpoint.Address"
              ]
            },
            ":",
            {
              "Fn::GetAtt": [
              "PatientServiceDBB84F9BF9",
              "Endpoint.Port"
              ]
            },
            "/patient-service-db"
            ]
          ]
          }
        },
        {
          "Name": "SPRING_DATASOURCE_PASSWORD",
          "Value": {
          "Fn::Join": [
            "",
            [
            "{{resolve:secretsmanager:",
            {
              "Ref": "PatientServiceDBSecretAttachment90D77B03"
            },
            ":SecretString:password::}}"
            ]
          ]
          }
        },
        {
          "Name": "SPRING_JPA_HIBERNATE_DDL_AUTO",
          "Value": "update"
        },
        {
          "Name": "SPRING_DATASOURCE_HIKARI_INITIALIZATION_FAIL_TIMEOUT",
          "Value": "60000"
        },
        {
          "Name": "SPRING_DATASOURCE_USERNAME",
          "Value": "admin_user"
        },
        {
          "Name": "SPRING_KAFKA_BOOTSTRAP_SERVERS",
          "Value": "localhost.localstack.cloud:4510, localhost.localstack.cloud:4511, localhost.localstack.cloud:4512"
        },
        {
          "Name": "BILLING_SERVICE_ADDRESS",
          "Value": "host.docker.internal"
        }
        ],
        "Essential": true,
        "Image": "patient-service",
        "LogConfiguration": {
        "LogDriver": "awslogs",
        "Options": {
          "awslogs-group": {
          "Ref": "PatientServiceLogGroup4A5C3809"
          },
          "awslogs-stream-prefix": "patient-service",
          "awslogs-region": {
          "Ref": "AWS::Region"
          }
        }
        },
        "Name": "patient-serviceContainer",
        "PortMappings": [
        {
          "ContainerPort": 4000,
          "HostPort": 4000,
          "Protocol": "tcp"
        }
        ]
      }
      ],
      "Cpu": "256",
      "ExecutionRoleArn": {
      "Fn::GetAtt": [
        "PatientServiceTaskExecutionRole3782903B",
        "Arn"
      ]
      },
      "Family": "localstackPatientServiceTask2770C053",
      "Memory": "512",
      "NetworkMode": "awsvpc",
      "RequiresCompatibilities": [
      "FARGATE"
      ],
      "TaskRoleArn": {
      "Fn::GetAtt": [
        "PatientServiceTaskTaskRole4FB5B4E2",
        "Arn"
      ]
      }
    }
    },
    "PatientServiceTaskExecutionRole3782903B": {
    "Type": "AWS::IAM::Role",
    "Properties": {
      "AssumeRolePolicyDocument": {
      "Statement": [
        {
        "Action": "sts:AssumeRole",
        "Effect": "Allow",
        "Principal": {
          "Service": "ecs-tasks.amazonaws.com"
        }
        }
      ],
      "Version": "2012-10-17"
      }
    }
    },
    "PatientServiceTaskExecutionRoleDefaultPolicy3866E91E": {
    "Type": "AWS::IAM::Policy",
    "Properties": {
      "PolicyDocument": {
      "Statement": [
        {
        "Action": [
          "logs:CreateLogStream",
          "logs:PutLogEvents"
        ],
        "Effect": "Allow",
        "Resource": {
          "Fn::GetAtt": [
          "PatientServiceLogGroup4A5C3809",
          "Arn"
          ]
        }
        }
      ],
      "Version": "2012-10-17"
      },
      "PolicyName": "PatientServiceTaskExecutionRoleDefaultPolicy3866E91E",
      "Roles": [
      {
        "Ref": "PatientServiceTaskExecutionRole3782903B"
      }
      ]
    }
    },
    "PatientServiceLogGroup4A5C3809": {
    "Type": "AWS::Logs::LogGroup",
    "Properties": {
      "LogGroupName": "/ecs/patient-service",
      "RetentionInDays": 1
    },
    "UpdateReplacePolicy": "Delete",
    "DeletionPolicy": "Delete"
    },
    "PatientServiceA65AB800": {
    "Type": "AWS::ECS::Service",
    "Properties": {
      "Cluster": {
      "Ref": "PatientManagementCluster98E10F8D"
      },
      "DeploymentConfiguration": {
      "Alarms": {
        "AlarmNames": [],
        "Enable": false,
        "Rollback": false
      },
      "MaximumPercent": 200,
      "MinimumHealthyPercent": 50
      },
      "EnableECSManagedTags": false,
      "LaunchType": "FARGATE",
      "NetworkConfiguration": {
      "AwsvpcConfiguration": {
        "AssignPublicIp": "DISABLED",
        "SecurityGroups": [
        {
          "Fn::GetAtt": [
          "PatientServiceSecurityGroup547BE1F2",
          "GroupId"
          ]
        }
        ],
        "Subnets": [
        {
          "Ref": "PatientManagementVPCPrivateSubnet1Subnet05B10E79"
        },
        {
          "Ref": "PatientManagementVPCPrivateSubnet2Subnet8A2E409C"
        }
        ]
      }
      },
      "ServiceName": "patient-service",
      "TaskDefinition": {
      "Ref": "PatientServiceTaskF865B565"
      }
    },
    "DependsOn": [
      "BillingServiceSecurityGroup3783AD35",
      "BillingServiceFEB36D90",
      "MskCluster",
      "PatientServiceDBB84F9BF9",
      "PatientServiceDBSecretAttachment90D77B03",
      "localstackPatientServiceDBSecret20E0A9443fdaad7efa858a3daf9490cf0a702aeb",
      "PatientServiceDBSecurityGroup6B97C0E5",
      "PatientServiceDBSubnetGroupCED49D16",
      "PatientServiceDBHealthCheck",
      "PatientServiceTaskTaskRole4FB5B4E2"
    ]
    },
    "PatientServiceSecurityGroup547BE1F2": {
    "Type": "AWS::EC2::SecurityGroup",
    "Properties": {
      "GroupDescription": "localstack/PatientService/SecurityGroup",
      "SecurityGroupEgress": [
      {
        "CidrIp": "0.0.0.0/0",
        "Description": "Allow all outbound traffic by default",
        "IpProtocol": "-1"
      }
      ],
      "VpcId": {
      "Ref": "PatientManagementVPC522067E7"
      }
    },
    "DependsOn": [
      "BillingServiceSecurityGroup3783AD35",
      "BillingServiceFEB36D90",
      "MskCluster",
      "PatientServiceDBB84F9BF9",
      "PatientServiceDBSecretAttachment90D77B03",
      "localstackPatientServiceDBSecret20E0A9443fdaad7efa858a3daf9490cf0a702aeb",
      "PatientServiceDBSecurityGroup6B97C0E5",
      "PatientServiceDBSubnetGroupCED49D16",
      "PatientServiceDBHealthCheck",
      "PatientServiceTaskTaskRole4FB5B4E2"
    ]
    },
    "APIGatewayTaskDefinitionTaskRole894A199F": {
    "Type": "AWS::IAM::Role",
    "Properties": {
      "AssumeRolePolicyDocument": {
      "Statement": [
        {
        "Action": "sts:AssumeRole",
        "Effect": "Allow",
        "Principal": {
          "Service": "ecs-tasks.amazonaws.com"
        }
        }
      ],
      "Version": "2012-10-17"
      }
    }
    },
    "APIGatewayTaskDefinition199BB1B7": {
    "Type": "AWS::ECS::TaskDefinition",
    "Properties": {
      "ContainerDefinitions": [
      {
        "Environment": [
        {
          "Name": "SPRING_PROFILES_ACTIVE",
          "Value": "prod"
        },
        {
          "Name": "AUTH_SERVICE_URL",
          "Value": "http://host.docker.internal:4005"
        }
        ],
        "Essential": true,
        "Image": "api-gateway",
        "LogConfiguration": {
        "LogDriver": "awslogs",
        "Options": {
          "awslogs-group": {
          "Ref": "ApiGatewayLogGroupA9770429"
          },
          "awslogs-stream-prefix": "api-gateway",
          "awslogs-region": {
          "Ref": "AWS::Region"
          }
        }
        },
        "Name": "APIGatewayContainer",
        "PortMappings": [
        {
          "ContainerPort": 4004,
          "HostPort": 4004,
          "Protocol": "tcp"
        }
        ]
      }
      ],
      "Cpu": "256",
      "ExecutionRoleArn": {
      "Fn::GetAtt": [
        "APIGatewayTaskDefinitionExecutionRole555CBA21",
        "Arn"
      ]
      },
      "Family": "localstackAPIGatewayTaskDefinitionF109B4B7",
      "Memory": "512",
      "NetworkMode": "awsvpc",
      "RequiresCompatibilities": [
      "FARGATE"
      ],
      "TaskRoleArn": {
      "Fn::GetAtt": [
        "APIGatewayTaskDefinitionTaskRole894A199F",
        "Arn"
      ]
      }
    }
    },
    "APIGatewayTaskDefinitionExecutionRole555CBA21": {
    "Type": "AWS::IAM::Role",
    "Properties": {
      "AssumeRolePolicyDocument": {
      "Statement": [
        {
        "Action": "sts:AssumeRole",
        "Effect": "Allow",
        "Principal": {
          "Service": "ecs-tasks.amazonaws.com"
        }
        }
      ],
      "Version": "2012-10-17"
      }
    }
    },
    "APIGatewayTaskDefinitionExecutionRoleDefaultPolicy582C1C35": {
    "Type": "AWS::IAM::Policy",
    "Properties": {
      "PolicyDocument": {
      "Statement": [
        {
        "Action": [
          "logs:CreateLogStream",
          "logs:PutLogEvents"
        ],
        "Effect": "Allow",
        "Resource": {
          "Fn::GetAtt": [
          "ApiGatewayLogGroupA9770429",
          "Arn"
          ]
        }
        }
      ],
      "Version": "2012-10-17"
      },
      "PolicyName": "APIGatewayTaskDefinitionExecutionRoleDefaultPolicy582C1C35",
      "Roles": [
      {
        "Ref": "APIGatewayTaskDefinitionExecutionRole555CBA21"
      }
      ]
    }
    },
    "ApiGatewayLogGroupA9770429": {
    "Type": "AWS::Logs::LogGroup",
    "Properties": {
      "LogGroupName": "/ecs/api-gateway",
      "RetentionInDays": 1
    },
    "UpdateReplacePolicy": "Delete",
    "DeletionPolicy": "Delete"
    },
    "APIGatewayServiceLBDA2B7609": {
    "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
    "Properties": {
      "LoadBalancerAttributes": [
      {
        "Key": "deletion_protection.enabled",
        "Value": "false"
      }
      ],
      "Scheme": "internet-facing",
      "SecurityGroups": [
      {
        "Fn::GetAtt": [
        "APIGatewayServiceLBSecurityGroup8524BFD1",
        "GroupId"
        ]
      }
      ],
      "Subnets": [
      {
        "Ref": "PatientManagementVPCPublicSubnet1SubnetC8305E9D"
      },
      {
        "Ref": "PatientManagementVPCPublicSubnet2Subnet07CEC558"
      }
      ],
      "Type": "application"
    },
    "DependsOn": [
      "PatientManagementVPCPublicSubnet1DefaultRoute1E407ABB",
      "PatientManagementVPCPublicSubnet1RouteTableAssociationA39A24A4",
      "PatientManagementVPCPublicSubnet2DefaultRoute2DC1F916",
      "PatientManagementVPCPublicSubnet2RouteTableAssociationCAC8BA09"
    ]
    },
    "APIGatewayServiceLBSecurityGroup8524BFD1": {
    "Type": "AWS::EC2::SecurityGroup",
    "Properties": {
      "GroupDescription": "Automatically created Security Group for ELB localstackAPIGatewayServiceLB0192615A",
      "SecurityGroupIngress": [
      {
        "CidrIp": "0.0.0.0/0",
        "Description": "Allow from anyone on port 80",
        "FromPort": 80,
        "IpProtocol": "tcp",
        "ToPort": 80
      }
      ],
      "VpcId": {
      "Ref": "PatientManagementVPC522067E7"
      }
    }
    },
    "APIGatewayServiceLBSecurityGrouptolocalstackAPIGatewayServiceSecurityGroup37054EEE4004CAF8FB32": {
    "Type": "AWS::EC2::SecurityGroupEgress",
    "Properties": {
      "Description": "Load balancer to target",
      "DestinationSecurityGroupId": {
      "Fn::GetAtt": [
        "APIGatewayServiceSecurityGroup98F3B93B",
        "GroupId"
      ]
      },
      "FromPort": 4004,
      "GroupId": {
      "Fn::GetAtt": [
        "APIGatewayServiceLBSecurityGroup8524BFD1",
        "GroupId"
      ]
      },
      "IpProtocol": "tcp",
      "ToPort": 4004
    }
    },
    "APIGatewayServiceLBPublicListenerD6FA7F47": {
    "Type": "AWS::ElasticLoadBalancingV2::Listener",
    "Properties": {
      "DefaultActions": [
      {
        "TargetGroupArn": {
        "Ref": "APIGatewayServiceLBPublicListenerECSGroupF9D8CC70"
        },
        "Type": "forward"
      }
      ],
      "LoadBalancerArn": {
      "Ref": "APIGatewayServiceLBDA2B7609"
      },
      "Port": 80,
      "Protocol": "HTTP"
    }
    },
    "APIGatewayServiceLBPublicListenerECSGroupF9D8CC70": {
    "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
    "Properties": {
      "Port": 80,
      "Protocol": "HTTP",
      "TargetGroupAttributes": [
      {
        "Key": "stickiness.enabled",
        "Value": "false"
      }
      ],
      "TargetType": "ip",
      "VpcId": {
      "Ref": "PatientManagementVPC522067E7"
      }
    }
    },
    "APIGatewayServiceA5206149": {
    "Type": "AWS::ECS::Service",
    "Properties": {
      "Cluster": {
      "Ref": "PatientManagementCluster98E10F8D"
      },
      "DeploymentConfiguration": {
      "Alarms": {
        "AlarmNames": [],
        "Enable": false,
        "Rollback": false
      },
      "MaximumPercent": 200,
      "MinimumHealthyPercent": 50
      },
      "DesiredCount": 1,
      "EnableECSManagedTags": false,
      "HealthCheckGracePeriodSeconds": 60,
      "LaunchType": "FARGATE",
      "LoadBalancers": [
      {
        "ContainerName": "APIGatewayContainer",
        "ContainerPort": 4004,
        "TargetGroupArn": {
        "Ref": "APIGatewayServiceLBPublicListenerECSGroupF9D8CC70"
        }
      }
      ],
      "NetworkConfiguration": {
      "AwsvpcConfiguration": {
        "AssignPublicIp": "DISABLED",
        "SecurityGroups": [
        {
          "Fn::GetAtt": [
          "APIGatewayServiceSecurityGroup98F3B93B",
          "GroupId"
          ]
        }
        ],
        "Subnets": [
        {
          "Ref": "PatientManagementVPCPrivateSubnet1Subnet05B10E79"
        },
        {
          "Ref": "PatientManagementVPCPrivateSubnet2Subnet8A2E409C"
        }
        ]
      }
      },
      "ServiceName": "api-gateway",
      "TaskDefinition": {
      "Ref": "APIGatewayTaskDefinition199BB1B7"
      }
    },
    "DependsOn": [
      "APIGatewayServiceLBPublicListenerECSGroupF9D8CC70",
      "APIGatewayServiceLBPublicListenerD6FA7F47",
      "APIGatewayTaskDefinitionTaskRole894A199F"
    ]
    },
    "APIGatewayServiceSecurityGroup98F3B93B": {
    "Type": "AWS::EC2::SecurityGroup",
    "Properties": {
      "GroupDescription": "localstack/APIGatewayService/Service/SecurityGroup",
      "SecurityGroupEgress": [
      {
        "CidrIp": "0.0.0.0/0",
        "Description": "Allow all outbound traffic by default",
        "IpProtocol": "-1"
      }
      ],
      "VpcId": {
      "Ref": "PatientManagementVPC522067E7"
      }
    },
    "DependsOn": [
      "APIGatewayTaskDefinitionTaskRole894A199F"
    ]
    },
    "APIGatewayServiceSecurityGroupfromlocalstackAPIGatewayServiceLBSecurityGroup32B4CA424004CA85E4CD": {
    "Type": "AWS::EC2::SecurityGroupIngress",
    "Properties": {
      "Description": "Load balancer to target",
      "FromPort": 4004,
      "GroupId": {
      "Fn::GetAtt": [
        "APIGatewayServiceSecurityGroup98F3B93B",
        "GroupId"
      ]
      },
      "IpProtocol": "tcp",
      "SourceSecurityGroupId": {
      "Fn::GetAtt": [
        "APIGatewayServiceLBSecurityGroup8524BFD1",
        "GroupId"
      ]
      },
      "ToPort": 4004
    },
    "DependsOn": [
      "APIGatewayTaskDefinitionTaskRole894A199F"
    ]
    }
  },
  "Outputs": {
    "APIGatewayServiceLoadBalancerDNS7C7318A3": {
    "Value": {
      "Fn::GetAtt": [
      "APIGatewayServiceLBDA2B7609",
      "DNSName"
      ]
    }
    },
    "APIGatewayServiceServiceURL95056890": {
    "Value": {
      "Fn::Join": [
      "",
      [
        "http://",
        {
        "Fn::GetAtt": [
          "APIGatewayServiceLBDA2B7609",
          "DNSName"
        ]
        }
      ]
      ]
    }
    }
  }
}
